css/style.css
body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    /*font-family: 'GFS Didot', serif;*/
    font-family: 'Averia Serif Libre', serif;
    background-color: white;
}

#navbar {
  height: 130px;
  background-color: white; 
  color: black;
  position: fixed; 
  z-index: 1000;
  letter-spacing: 3px;
  font-size: 1.15vw;
  font-family: 'Averia Serif Libre', serif;
  width: 100%; 
  transition: height 0.5s; /* Include width in transition */
}

#navbar-notstatic{
  min-height: 100px;
  background-color: white; 
  color: black;
  z-index: 1000;
  letter-spacing: 3px;
  font-size: 1.15vw;
  font-family: 'Averia Serif Libre', serif;
  width: 100%; 
  border-bottom: 1px solid #ced4da; /* Border color */
}
.nav-scrolled {
  height: 100px !important;
}

.nav-img-scrolled {
  width: 200px !important;
}
.navbar-nav {
  display: flex;
  align-items: center;
  margin: 0 auto; /* Center the navigation links */
}

#navbar img {
  width: 240px;
  transition: width 0.5s;
}

#navbar-notstatic img {
  max-width: 200px;
  min-width: 200px;
}



nav li {
  /*padding: 0px 1.5vw 0px 1.5vw;*/
min-width: 110px;
}

.nav-item.spacer {
  width: 330px; 
}


hr {
  color: #ffffff; /* Line color */
  background-color: #333; /* Line color for browsers that support it */
  height: 2px; /* Line thickness */
  margin: 20px 0; /* Margin above and below the line */
}

.top-content{
  background-color: white;
}

.container-fluid.headerimg,
.container-fluid.top-content {
    padding-top: 0; /* Remove top padding */
    padding-bottom: 0; /* Remove bottom padding */
}

.top-content img{
  height: 100%;
  width: 100%;
  object-fit: cover;
}

#contact-form{
  padding-top: 50px; /* Adjust this value based on your navbar height */
  padding-bottom: 50px;
}

.text-form{
  color: black;
}

.text-form input {
  color: black;
  background-color: white;
  border-color: black;
}

.text-form span{
background-color: white;
border-color: black;
}

#message{
  color: black;
  background-color: white;
  border-color: black;
}

.headerimg{
    height: 85vh;
    display: flex;
    align-items: center; /* Vertical centering */
    justify-content: center; /* Horizontal centering */
    color: aliceblue;
    padding-left: 0;
    padding-right: 0;
    padding-top: 5vh;
  }

  video {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: right top; 
  }
  
  .headerimg h1 {
    font-size: 5vw;
    text-align: center;
    font-family: 'Averia Serif Libre', serif;
  }

  .headerimg h2 {
    font-family: 'Averia Serif Libre', serif;
    display: inline-block;
    border: 2px solid white;
  }

  .intro-message {
    margin-top: 0vh;
    padding-top: 0vh;
    padding-bottom: 5vh;
  }

  .intro-message h1{
    font-size: 3vw;
    letter-spacing: 3px;
    padding-bottom: 4vh;
  }

  .intro-message h2{
    font-size: 2vw;
    letter-spacing: 3px;
  }

.blackjumbo {
    background-color: black;
    color: white;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
   display: block;
  }

  .two-columns {
    display: flex;
    justify-content: space-between;
}

.custom-img {
  width: 100%; /* To make sure it fills the entire width of the column */
  height: 100%; /* To make sure it fills the entire height of the container */
  object-fit: cover;
  object-position: center 15%
}

.review-slider{
  height: 65vh;
  width: 100%;
  background-color: black;
  color: white;
  display: flex;
  flex-direction: column; /* Stack items vertically */
  justify-content: center;
  position: relative;
}

.slider-content {
  margin-bottom: 20px; /* Adjust as needed to create space between content and controls */
}

.slider-controls {
  position: absolute;
  bottom: 10px; /* Adjust as needed to position controls from the bottom */
  left: 50%;
  transform: translateX(-50%);
}

/* Style for controls (adjust as needed) */
.slider-controls button {
  background-color: rgba(255, 255, 255, 0.5);
  color: black;
  padding: 10px;
  border: none;
  cursor: pointer;
}

.slider-title,
.slider-body {
  text-align: center; /* Center text within each element */
  max-width: 70%; /* Adjust the maximum width as needed */
  margin: 0 auto; /* Center elements within the container */
}

.slider-title {
  font-size: 2.5vw;
  font-weight: bold;
  margin-bottom: 10px;
  text-transform: uppercase;
}

.slider-body {
  font-size: 1.5vw;
  margin-bottom: 20px;
}

.about-section{
  padding: 5vw;
}

#guarantee {
  /*background-image: url("/img/suit1.jpg")!important;
  background-size: cover; 
  background-position: center; */
}

#footer-container{
  border-top: 1px solid #ced4da; /* Border color */
}

#footer-logo {
  width: 4vw;
}

#footer-id p {
  font-size: 1.3vw;
}

footer li {
  margin: 0 2vw;
}

.icon {
  font-size: 2vw;
}

#lookbook {
  padding-top: 50px; /* Adjust this value based on your navbar height */
  padding-bottom: 50px;}

.close {
  font-size: 1.5rem;
}

#lookbook div {
  padding-bottom: 3vh;
}

#lookbook .col-12 img {
  opacity: 0.8;
  cursor: pointer;
  width: 100%;
}

#lookbook .col-12 img:hover {
  opacity: 1;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}


  /* Extra small devices (phones) */
@media (max-width: 576px) {
    /* Styles for phones */
    #navbar {
      font-size: 4vw;
    }
    #navbar img {
      padding-left: 30px;
    }
    #navbar-static {
      font-size: 4vw;
    }
    #navbar-static img {
      padding-left: 30px;
    }
    #navbar-notstatic {
      font-size: 4vw;
    }
    #navbar-notstatic img {
      padding-left: 30px;
    }

    .intro-message {
      margin-top: 1vh;
      padding-top: 4vh;
      padding-bottom: 5vh;
    }
    .intro-message h1{
      font-size: 8vw;
      letter-spacing: 3px;
      padding-bottom: 2vh;
    }
  
    .intro-message h2{
      font-size: 5vw;
      letter-spacing: 3px;
    }


      .headerimg img {
        width: 70vw;
      }

      .blackjumbo h2{
          font-size: 5.5vw;
          padding-bottom: 2.5vh;

      }

      .blackjumbo h3{
        font-size: 4.5vw;

    }

      .blackjumbo p{
        font-size: 3vw;
        padding-bottom: 3vh;
    }

    .custom-img {
      height: 55vh;
      width: 100%; /* To make sure it fills the entire width of the column */
      object-fit: cover;
    }

    .review-slider{
      height: 40vh;
    }
    .slider-title {
      font-size: 4vw;
      font-weight: bold;
      margin-bottom: 10px;
      text-transform: uppercase;
    }
    
    .slider-body {
      font-size: 2.5vw;
      margin-bottom: 20px;
    }

    video {
      object-position: center top; 
      height: 100%;
    }

    #lookbook .col-12 img {
      opacity: 1;
      padding: 0 1vw 5vh 1vw;
      margin: 0;
      width: 100%;
    }

    footer li {
      margin: 0 2vw;
    }

    .icon {
      font-size: 6vw;
    }

    #footer-logo {
      width: 14vw;
      margin-bottom: 1vh;;
    }
    
    #footer-id p {
      font-size: 4vw;
    }
}

/* Small devices (tablets) */
@media (min-width: 577px) and (max-width: 767px) {
    /* Styles for tablets */
    #navbar {
      font-size: 3vw;
    }
    #navbar img {
      padding-left: 30px;
    }
    #navbar-static {
      font-size: 3vw;
    }
    #navbar-static img {
      padding-left: 30px;
    }
    #navbar-notstatic {
      font-size: 3vw;
    }
    #navbar-notstatic img {
      padding-left: 30px;
    }

    .intro-message {
      margin-top: 1vh;
      padding-top: 4vh;
      padding-bottom: 5vh;
    }

    .intro-message h1{
      font-size: 7vw;
      letter-spacing: 3px;
      padding-bottom: 2vh;
    }
  
    .intro-message h2{
      font-size: 4vw;
      letter-spacing: 3px;
    }

      .review-slider{
        height: 55vh;
      }
      .slider-title {
        font-size: 3vw;
        font-weight: bold;
        margin-bottom: 10px;
        text-transform: uppercase;
      }
      
      .slider-body {
        font-size: 2vw;
        margin-bottom: 20px;
      }

      #lookbook .col-12 img {
        opacity: 1;
        padding: 0 1vw 5vh 1vw;
        margin: 0;
        width: 100%;
      }

      footer li {
        margin: 0 2vw;
      }
  
      .icon {
        font-size: 6vw;
      }

      #footer-logo {
        width: 12vw;
        margin-bottom: 1vh;;
      }
  
      #footer-id p {
        font-size: 3vw;
      }
}

/* Medium devices (laptops, small desktops) */
@media (min-width: 768px) and (max-width: 991px) {
    /* Styles for laptops and small desktops */
    #navbar {
      font-size: 1.8vw;
    }
    #navbar-static {
      font-size: 1.8vw;
    }
    #navbar-notstatic {
      font-size: 1.8vw;
    }
    nav li {
      /*padding: 0px 1.5vw 0px 1.5vw;*/
    min-width: 80px;
    }
    .navbar-brand {
      position: absolute;
      text-align: center;
      width: 100%;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
    }

    .intro-message {
      margin-top: 1vh;
      padding-top: 4vh;
      padding-bottom: 5vh;
    }

    .intro-message h1{
      font-size: 6vw;
      letter-spacing: 3px;
      padding-bottom: 2vh;
    }
  
    .intro-message h2{
      font-size: 3vw;
      letter-spacing: 3px;
    }

      #lookbook .col-12 img {
        opacity: 1;
        padding: 0 1vw 5vh 1vw;
        margin: 0;
        width: 100%;
      }

      footer li {
        margin: 0 2vw;
      }
  
      .icon {
        font-size: 4vw;
      }

      #footer-logo {
        width: 8vw;
        margin-bottom: 1vh;;
      }

      #footer-id p {
        font-size: 2.5vw;
      }
}

/* Large devices (desktops) */
@media (min-width: 992px) and (max-width: 1199px) {
    /* Styles for desktops */
    #navbar {
      font-size: 1.8vw;
    }
    #navbar-static {
      font-size: 1.8vw;
    }
    #navbar-notstatic {
      font-size: 1.8vw;
    }

    .navbar-brand {
      position: absolute;
      text-align: center;
      width: 100%;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
    }
    .intro-message {
      margin-top: 1vh;
      padding-top: 4vh;
      padding-bottom: 5vh;
    }

    .intro-message h1{
      font-size: 4vw;
      letter-spacing: 3px;
      padding-bottom: 2vh;
    }
  
    .intro-message h2{
      font-size: 2vw;
      letter-spacing: 3px;
    }

}

/* Extra large devices (large desktops) */
@media (min-width: 1200px) {
    /* Styles for large desktops */
    .navbar-brand {
      position: absolute;
      text-align: center;
      width: 100%;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
    }
}

